--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,8 @@ Description: What the package does (one paragraph).
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.3.2
+RoxygenNote: 7.3.3
+LazyData: true
 Imports:
     bea.R,
     dplyr,
@@ -15,4 +16,8 @@ Imports:
     tidyr,
     readxl,
     traveltimeR,
-    sf
+    sf,
+    readxl,
+    googlesheets4,
+    shiny,
+    leaflet
