--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,8 @@ export(bea_key)
 export(cbsa_geoids)
 export(census_key)
 export(county_geoids)
+export(google_sheets_auth)
 export(retrieve_data)
 export(travel_time)
 export(travel_time_key)
+export(web_app)
